@@ -308,7 +308,7 @@ for ease of reading)
 .P
 <dbhost>[:<dbport>[:<dbname>[:<dbtable>[:<dbuser>
 .br
-[:<dbpwd>[:<dbsrvcol>[:<dbusercol>[:<dbportcol>]]]]]]]]
+[:<dbpwd>[:<dbusercol>[:<dbusercol>[:<dbportcol>]]]]]]]]
 .P
 E.g.
 .P
@@ -343,7 +343,7 @@ command line option or configuration file option.
 .P
 E.g.
 .P
-perdition \-M /usr/lib/libperditiondb_mysql.so.0
+perdition \-M /usr/lib/libperditiondb_postgresql.so.0
 .P
 Where /usr/lib is the directory in which the perdition libraries
 were installed.
