@@ -13,6 +13,10 @@ XXX
  - Diable use of ldap_initialise() as it seems broken on some
    OpenLdap releases. Hopefully we can make a check for this 
    that works in the futrure.
+ - The documentation for the mysql (and postgresql) pompaps
+   had the order of the dbsrvcol and dbsrvcol parameters inverted.
+   This has been fixed, and the code has been reordered to reflect this
+   - although the reordering does not affect the functionality.
 
 ----------------------------------------------------------------------
 
